# nxppy

./: .gitignore  .indent.pro  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Mifare.c  Mifare.h  MifareClassicExample.py  NXP_NFC_Reader_Library_licencefile.txt  README.md  errors.h  get_nxpRdLib.sh  main.h  nxppy.c  requirements-dev.txt  setup.py  wrapper.py
.github/: ISSUE_TEMPLATE.md
NxpRdLib_PublicRelease/: CMakeLists.txt
NxpRdLib_PublicRelease/comps/phCidManager/src/: phCidManager.c
NxpRdLib_PublicRelease/comps/phCidManager/src/Rd710/: phCidManager_Rd710.c  phCidManager_Rd710.h
NxpRdLib_PublicRelease/comps/phCidManager/src/Sw/: phCidManager_Sw.c  phCidManager_Sw.h
NxpRdLib_PublicRelease/comps/phKeyStore/src/: phKeyStore.c  phKeyStore_Int.h
NxpRdLib_PublicRelease/comps/phKeyStore/src/Rc632/: phKeyStore_Rc632.c  phKeyStore_Rc632.h  phKeyStore_Rc632_Int.h
NxpRdLib_PublicRelease/comps/phKeyStore/src/Rc663/: phKeyStore_Rc663.c  phKeyStore_Rc663.h  phKeyStore_Rc663_Int.h
NxpRdLib_PublicRelease/comps/phKeyStore/src/Rd710/: phKeyStore_Rd710.c  phKeyStore_Rd710.h
NxpRdLib_PublicRelease/comps/phKeyStore/src/Sw/: phKeyStore_Sw.c  phKeyStore_Sw.h  phKeyStore_Sw_Int.h
NxpRdLib_PublicRelease/comps/phLog/src/: phLog.c  phLog_Int.h
NxpRdLib_PublicRelease/comps/phTools/src/: phTools.c
NxpRdLib_PublicRelease/comps/phalMfc/src/: phalMfc.c  phalMfc_Int.c  phalMfc_Int.h
NxpRdLib_PublicRelease/comps/phalMfc/src/Sw/: phalMfc_Sw.c  phalMfc_Sw.h
NxpRdLib_PublicRelease/comps/phalMful/src/: phalMful.c  phalMful_Int.c  phalMful_Int.h
NxpRdLib_PublicRelease/comps/phalMful/src/Sw/: phalMful_Sw.c  phalMful_Sw.h
NxpRdLib_PublicRelease/comps/phbalReg/src/: phbalReg.c
NxpRdLib_PublicRelease/comps/phbalReg/src/PcscWin/: phbalReg_PcscWin.c  phbalReg_PcscWin.h  phbalReg_PcscWin_Int.h
NxpRdLib_PublicRelease/comps/phbalReg/src/R_Pi_spi/: phbalReg_R_Pi_spi.c  phbalReg_R_Pi_spi.h
NxpRdLib_PublicRelease/comps/phbalReg/src/Rd70xUsbWin/: phbalReg_Rd70xUsbWin.c  phbalReg_Rd70xUsbWin.h  phbalReg_Rd70xUsbWin_Int.c  phbalReg_Rd70xUsbWin_Int.h
NxpRdLib_PublicRelease/comps/phbalReg/src/SerialWin/: phbalReg_SerialWin.c  phbalReg_SerialWin.h  phbalReg_SerialWin_Int.h
NxpRdLib_PublicRelease/comps/phbalReg/src/Stub/: phbalReg_Stub.c  phbalReg_Stub.h
NxpRdLib_PublicRelease/comps/phhalHw/src/: phhalHw.c
NxpRdLib_PublicRelease/comps/phhalHw/src/Callback/: phhalHw_Callback.c  phhalHw_Callback.h
NxpRdLib_PublicRelease/comps/phhalHw/src/Rc523/: phhalHw_Rc523.c  phhalHw_Rc523.h  phhalHw_Rc523_Cmd.c  phhalHw_Rc523_Config.h  phhalHw_Rc523_Int.c  phhalHw_Rc523_Int.h  phhalHw_Rc523_Wait.c
NxpRdLib_PublicRelease/comps/phhalHw/src/Rc632/: phhalHw_Rc632.c  phhalHw_Rc632.h  phhalHw_Rc632_Cmd.c  phhalHw_Rc632_Config.h  phhalHw_Rc632_Int.c  phhalHw_Rc632_Int.h
NxpRdLib_PublicRelease/comps/phhalHw/src/Rc663/: phhalHw_Rc663.c  phhalHw_Rc663.h  phhalHw_Rc663_Cmd.c  phhalHw_Rc663_Config.h  phhalHw_Rc663_Int.c  phhalHw_Rc663_Int.h  phhalHw_Rc663_Wait.c
NxpRdLib_PublicRelease/comps/phhalHw/src/Rd70x/: phhalHw_Rd70x.c  phhalHw_Rd70x.h  phhalHw_Rd70x_Cmd.c  phhalHw_Rd70x_Int.c  phhalHw_Rd70x_Int.h
NxpRdLib_PublicRelease/comps/phhalHw/src/Rd710/: phhalHw_Rd710.c  phhalHw_Rd710.h  phhalHw_Rd710_Cmd.c  phhalHw_Rd710_Int.c  phhalHw_Rd710_Int.h
NxpRdLib_PublicRelease/comps/phpalEpcUid/src/: phpalEpcUid.c
NxpRdLib_PublicRelease/comps/phpalEpcUid/src/Sw/: phpalEpcUid_Sw.c  phpalEpcUid_Sw.h  phpalEpcUid_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalFelica/src/: phpalFelica.c
NxpRdLib_PublicRelease/comps/phpalFelica/src/Sw/: phpalFelica_Sw.c  phpalFelica_Sw.h  phpalFelica_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalI14443p3a/src/: phpalI14443p3a.c
NxpRdLib_PublicRelease/comps/phpalI14443p3a/src/Rd70x/: phpalI14443p3a_Rd70x.c  phpalI14443p3a_Rd70x.h
NxpRdLib_PublicRelease/comps/phpalI14443p3a/src/Rd710/: phpalI14443p3a_Rd710.c  phpalI14443p3a_Rd710.h
NxpRdLib_PublicRelease/comps/phpalI14443p3a/src/Sw/: phpalI14443p3a_Sw.c  phpalI14443p3a_Sw.h  phpalI14443p3a_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalI14443p3b/src/: phpalI14443p3b.c
NxpRdLib_PublicRelease/comps/phpalI14443p3b/src/Sw/: phpalI14443p3b_Sw.c  phpalI14443p3b_Sw.h  phpalI14443p3b_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalI14443p4/src/: phpalI14443p4.c
NxpRdLib_PublicRelease/comps/phpalI14443p4/src/Rd710/: phpalI14443p4_Rd710.c  phpalI14443p4_Rd710.h
NxpRdLib_PublicRelease/comps/phpalI14443p4/src/Sw/: phpalI14443p4_Sw.c  phpalI14443p4_Sw.h  phpalI14443p4_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalI14443p4a/src/: phpalI14443p4a.c
NxpRdLib_PublicRelease/comps/phpalI14443p4a/src/Rd710/: phpalI14443p4a_Rd710.c  phpalI14443p4a_Rd710.h
NxpRdLib_PublicRelease/comps/phpalI14443p4a/src/Sw/: phpalI14443p4a_Sw.c  phpalI14443p4a_Sw.h  phpalI14443p4a_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalI18092mPI/src/: phpalI18092mPI.c
NxpRdLib_PublicRelease/comps/phpalI18092mPI/src/Sw/: phpalI18092mPI_Sw.c  phpalI18092mPI_Sw.h  phpalI18092mPI_Sw_Int.c  phpalI18092mPI_Sw_Int.h
NxpRdLib_PublicRelease/comps/phpalMifare/src/: phpalMifare.c  phpalMifare_Int.h
NxpRdLib_PublicRelease/comps/phpalMifare/src/Rd710/: phpalMifare_Rd710.c  phpalMifare_Rd710.h
NxpRdLib_PublicRelease/comps/phpalMifare/src/Stub/: phpalMifare_Stub.c  phpalMifare_Stub.h
NxpRdLib_PublicRelease/comps/phpalSli15693/src/: phpalSli15693.c
NxpRdLib_PublicRelease/docs/14_user_doc/: NXP Reader Library.chm
NxpRdLib_PublicRelease/docs/22_rel_doc/: ReleaseNotes.txt
NxpRdLib_PublicRelease/intfs/: phCidManager.h  phKeyStore.h  phLog.h  phTools.h  phalMfc.h  phalMful.h  phbalReg.h  phhalHw.h  phhalHw_Rc523_Cmd.h  phhalHw_Rc523_Reg.h  phhalHw_Rc632_Cmd.h  phhalHw_Rc632_Reg.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phhalHw_Rd70x_Cmd.h  phhalHw_Rd70x_Reg.h  phhalHw_Rd710_Cmd.h  phpalEpcUid.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI18092mPI.h  phpalMifare.h  phpalSli15693.h
NxpRdLib_PublicRelease/types/: ph_NxpBuild.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
tests/: basic_test.py  either_or.py
(+5 files in other folders)
