cmake_minimum_required(VERSION 3.6)
project(nxppy)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(
        /usr/include/python3.4m/
        nxp/nxprdlib/NxpRdLib/intfs/
        nxp/nxprdlib/NxpRdLib/types/
        nxp/nxprdlib/NxpRdLib/
        nxp/linux/intfs/
        nxp/linux/comps/phbalReg/src/Linux/
        nxp/linux/shared/
        nxp/examples/NfcrdlibEx4_MIFAREClassic/intfs/
        nxp/nxprdlib/NxpRdLib/comps/phbalReg/src/Stub/
        nxp/linux/comps/phPlatform/src/Posix/
        nxp/linux/comps/phOsal/src/Posix/)

set(SOURCE_FILES
    nxp/addition/kernel-space_bal-module/bal/include/linux/spi/bal_spi.h
    nxp/addition/kernel-space_bal-module/bal/bal.c
    nxp/build/CMakeFiles/3.0.2/CompilerIdC/CMakeCCompilerId.c
    nxp/build/CMakeFiles/3.0.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    nxp/examples/NfcrdlibEx1_BasicDiscoveryLoop/intfs/cards.h
    nxp/examples/NfcrdlibEx1_BasicDiscoveryLoop/src/cards.c
    nxp/examples/NfcrdlibEx1_BasicDiscoveryLoop/NfcrdlibEx1_BasicDiscoveryLoop.c
    nxp/examples/NfcrdlibEx2_AdvancedDiscoveryLoop/intfs/cards.h
    nxp/examples/NfcrdlibEx2_AdvancedDiscoveryLoop/src/cards.c
    nxp/examples/NfcrdlibEx2_AdvancedDiscoveryLoop/NfcrdlibEx2_AdvancedDiscoveryLoop.c
    nxp/examples/NfcrdlibEx3_NFCForum/intfs/cards.h
    nxp/examples/NfcrdlibEx3_NFCForum/intfs/NfcrdlibEx3_NFCForum.h
    nxp/examples/NfcrdlibEx3_NFCForum/src/cards.c
    nxp/examples/NfcrdlibEx3_NFCForum/NfcrdlibEx3_NFCForum.c
    nxp/examples/NfcrdlibEx4_MIFAREClassic/NfcrdlibEx4_MIFAREClassic.c
    nxp/examples/NfcrdlibEx5_ISO15693/NfcrdlibEx5_ISO15693.c
    nxp/examples/NfcrdlibEx6_EMVCo_Loopback/NfcrdlibEx6_EMVCo_Loopback.c
    nxp/examples/NfcrdlibEx7_EMVCo_Polling/NfcrdlibEx7_EMVCo_Polling.c
    nxp/examples/NfcrdlibEx8_HCE_T4T/intfs/NfcrdlibEx8_HCE_T4T.h
    nxp/examples/NfcrdlibEx8_HCE_T4T/NfcrdlibEx8_HCE_T4T.c
    nxp/examples/NfcrdlibEx9_NTagI2C/intfs/phhwConfig.h
    nxp/examples/NfcrdlibEx9_NTagI2C/src/phHwConfig_Lpc11u68.c
    nxp/examples/NfcrdlibEx9_NTagI2C/src/phHwConfig_Lpc1769.c
    nxp/examples/NfcrdlibEx9_NTagI2C/NfcrdlibEx9_NTagI2C.c
    nxp/linux/comps/phbalReg/src/Linux/phbalReg_Stub.c
    nxp/linux/comps/phbalReg/src/Linux/phbalReg_Stub_Kernel.c
    nxp/linux/comps/phbalReg/src/Linux/phbalReg_Stub_Utils.c
    nxp/linux/comps/phbalReg/src/Linux/phbalReg_Stub_Utils.h
    nxp/linux/comps/phOsal/src/Posix/phOsal_Posix.c
    nxp/linux/comps/phOsal/src/Posix/phOsal_Posix_Int.h
    nxp/linux/comps/phPlatform/src/Posix/phPlatform.c
    nxp/linux/comps/phPlatform/src/Posix/phPlatform.h
    nxp/linux/intfs/ph_NxpBuild_App.h
    nxp/linux/intfs/phOsal_Posix_Thread.h
    nxp/linux/shared/phhwConfig.c
    nxp/linux/shared/phhwConfig.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_A.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_A.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_B.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_B.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_F.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_F.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_I18000p3m3.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_I18000p3m3.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_V.c
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/Sw/phacDiscLoop_Sw_Int_V.h
    nxp/nxprdlib/NxpRdLib/comps/phacDiscLoop/src/phacDiscLoop.c
    nxp/nxprdlib/NxpRdLib/comps/phalFelica/src/Sw/phalFelica_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalFelica/src/Sw/phalFelica_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalFelica/src/phalFelica.c
    nxp/nxprdlib/NxpRdLib/comps/phalFelica/src/phalFelica_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalI15693/src/Sw/phalI15693_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalI15693/src/Sw/phalI15693_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalI15693/src/Sw/phalI15693_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalI15693/src/phalI15693.c
    nxp/nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/Sw/phalI18000p3m3_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/Sw/phalI18000p3m3_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/Sw/phalI18000p3m3_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/Sw/phalI18000p3m3_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/phalI18000p3m3.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfc/src/Sw/phalMfc_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfc/src/Sw/phalMfc_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalMfc/src/phalMfc.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfc/src/phalMfc_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfc/src/phalMfc_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/Sw/phalMfdf_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/Sw/phalMfdf_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/Sw/phalMfdf_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/Sw/phalMfdf_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/phalMfdf.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/phalMfdf_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phalMfdf/src/phalMfdf_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalMful/src/Sw/phalMful_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalMful/src/Sw/phalMful_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalMful/src/phalMful.c
    nxp/nxprdlib/NxpRdLib/comps/phalMful/src/phalMful_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phalMful/src/phalMful_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalSli/src/Sw/phalSli_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalSli/src/Sw/phalSli_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalSli/src/Sw/phalSli_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalSli/src/phalSli.c
    nxp/nxprdlib/NxpRdLib/comps/phalSli/src/phalSli_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phalT1T/src/Sw/phalT1T_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalT1T/src/Sw/phalT1T_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalT1T/src/phalT1T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T1T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T1T.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T2T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T2T.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T3T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T3T.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T4T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T4T.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T5T.c
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/Sw/phalTop_Sw_Int_T5T.h
    nxp/nxprdlib/NxpRdLib/comps/phalTop/src/phalTop.c
    nxp/nxprdlib/NxpRdLib/comps/phbalReg/src/Stub/phbalReg_Stub.h
    nxp/nxprdlib/NxpRdLib/comps/phbalReg/src/phbalReg.c
    nxp/nxprdlib/NxpRdLib/comps/phceT4T/src/Sw/phceT4T_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phceT4T/src/Sw/phceT4T_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phceT4T/src/Sw/phceT4T_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phceT4T/src/Sw/phceT4T_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phceT4T/src/phceT4T.c
    nxp/nxprdlib/NxpRdLib/comps/phCidManager/src/Sw/phCidManager_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phCidManager/src/Sw/phCidManager_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phCidManager/src/phCidManager.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180_Instr.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180_Wait.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Pn5180/phhalHw_Pn5180_Wait.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523_Cmd.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523_Config.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc523/phhalHw_Rc523_Wait.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663_Cmd.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663_Config.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/Rc663/phhalHw_Rc663_Wait.c
    nxp/nxprdlib/NxpRdLib/comps/phhalHw/src/phhalHw.c
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Rc663/phKeyStore_Rc663.c
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Rc663/phKeyStore_Rc663.h
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Rc663/phKeyStore_Rc663_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Sw/phKeyStore_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Sw/phKeyStore_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/Sw/phKeyStore_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/phKeyStore.c
    nxp/nxprdlib/NxpRdLib/comps/phKeyStore/src/phKeyStore_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Mac.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Mac.h
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Transport.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Transport_Connection.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Sw_Transport_Connectionless.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Timers.c
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/Sw/phlnLlcp_Timers.h
    nxp/nxprdlib/NxpRdLib/comps/phlnLlcp/src/phlnLlcp.c
    nxp/nxprdlib/NxpRdLib/comps/phLog/src/phLog.c
    nxp/nxprdlib/NxpRdLib/comps/phLog/src/phLog_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phnpSnep/src/Sw/phnpSnep_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phnpSnep/src/Sw/phnpSnep_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phnpSnep/src/phnpSnep.c
    nxp/nxprdlib/NxpRdLib/comps/phOsal/src/Freertos/phOsal_Freertos.c
    nxp/nxprdlib/NxpRdLib/comps/phOsal/src/Nortos/phOsal_Nortos.c
    nxp/nxprdlib/NxpRdLib/comps/phpalEpcUid/src/Sw/phpalEpcUid_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalEpcUid/src/Sw/phpalEpcUid_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalEpcUid/src/Sw/phpalEpcUid_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalEpcUid/src/phpalEpcUid.c
    nxp/nxprdlib/NxpRdLib/comps/phpalFelica/src/Sw/phpalFelica_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalFelica/src/Sw/phpalFelica_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalFelica/src/Sw/phpalFelica_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalFelica/src/phpalFelica.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3a/src/Sw/phpalI14443p3a_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3a/src/Sw/phpalI14443p3a_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3a/src/Sw/phpalI14443p3a_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3a/src/phpalI14443p3a.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3b/src/Sw/phpalI14443p3b_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3b/src/Sw/phpalI14443p3b_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3b/src/Sw/phpalI14443p3b_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p3b/src/phpalI14443p3b.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4/src/Sw/phpalI14443p4_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4/src/Sw/phpalI14443p4_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4/src/Sw/phpalI14443p4_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4/src/phpalI14443p4.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4a/src/Sw/phpalI14443p4a_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4a/src/Sw/phpalI14443p4a_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4a/src/Sw/phpalI14443p4a_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4a/src/phpalI14443p4a.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/Sw/phpalI14443p4mC_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/Sw/phpalI14443p4mC_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/Sw/phpalI14443p4mC_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/Sw/phpalI14443p4mC_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/phpalI14443p4mC.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18000p3m3/src/Sw/phpalI18000p3m3_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18000p3m3/src/Sw/phpalI18000p3m3_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18000p3m3/src/Sw/phpalI18000p3m3_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18000p3m3/src/phpalI18000p3m3.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/Sw/phpalI18092mPI_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/phpalI18092mPI.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw_Int.c
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mT/src/Sw/phpalI18092mT_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalI18092mT/src/phpalI18092mT.c
    nxp/nxprdlib/NxpRdLib/comps/phpalMifare/src/Sw/phpalMifare_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalMifare/src/Sw/phpalMifare_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalMifare/src/phpalMifare.c
    nxp/nxprdlib/NxpRdLib/comps/phpalMifare/src/phpalMifare_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalSli15693/src/Sw/phpalSli15693_Sw.c
    nxp/nxprdlib/NxpRdLib/comps/phpalSli15693/src/Sw/phpalSli15693_Sw.h
    nxp/nxprdlib/NxpRdLib/comps/phpalSli15693/src/Sw/phpalSli15693_Sw_Int.h
    nxp/nxprdlib/NxpRdLib/comps/phpalSli15693/src/phpalSli15693.c
    nxp/nxprdlib/NxpRdLib/comps/phTools/src/phTools.c
    nxp/nxprdlib/NxpRdLib/comps/phTools/src/phTools_Q.c
    nxp/nxprdlib/NxpRdLib/intfs/NxpRdLib_Ver.h
    nxp/nxprdlib/NxpRdLib/intfs/phacDiscLoop.h
    nxp/nxprdlib/NxpRdLib/intfs/phalFelica.h
    nxp/nxprdlib/NxpRdLib/intfs/phalI15693.h
    nxp/nxprdlib/NxpRdLib/intfs/phalI18000p3m3.h
    nxp/nxprdlib/NxpRdLib/intfs/phalMfc.h
    nxp/nxprdlib/NxpRdLib/intfs/phalMfdf.h
    nxp/nxprdlib/NxpRdLib/intfs/phalMful.h
    nxp/nxprdlib/NxpRdLib/intfs/phalSli.h
    nxp/nxprdlib/NxpRdLib/intfs/phalT1T.h
    nxp/nxprdlib/NxpRdLib/intfs/phalTop.h
    nxp/nxprdlib/NxpRdLib/intfs/phbalReg.h
    nxp/nxprdlib/NxpRdLib/intfs/phceT4T.h
    nxp/nxprdlib/NxpRdLib/intfs/phCidManager.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Pn5180_Instr.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Pn5180_Reg.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Rc523_Cmd.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Rc523_Reg.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Rc663_Cmd.h
    nxp/nxprdlib/NxpRdLib/intfs/phhalHw_Rc663_Reg.h
    nxp/nxprdlib/NxpRdLib/intfs/phKeyStore.h
    nxp/nxprdlib/NxpRdLib/intfs/phlnLlcp.h
    nxp/nxprdlib/NxpRdLib/intfs/phLog.h
    nxp/nxprdlib/NxpRdLib/intfs/phnpSnep.h
    nxp/nxprdlib/NxpRdLib/intfs/phOsal.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalEpcUid.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalFelica.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI14443p3a.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI14443p3b.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI14443p4.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI14443p4a.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI14443p4mC.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI18000p3m3.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI18092mPI.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalI18092mT.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalMifare.h
    nxp/nxprdlib/NxpRdLib/intfs/phpalSli15693.h
    nxp/nxprdlib/NxpRdLib/intfs/phTools.h
    nxp/nxprdlib/NxpRdLib/types/ph_NxpBuild.h
    nxp/nxprdlib/NxpRdLib/types/ph_NxpBuild_Lpc.h
    nxp/nxprdlib/NxpRdLib/types/ph_NxpBuild_Pc.h
    nxp/nxprdlib/NxpRdLib/types/ph_RefDefs.h
    nxp/nxprdlib/NxpRdLib/types/ph_Status.h
    nxp/nxprdlib/NxpRdLib/types/ph_TypeDefs.h
    tests/__init__.py
    tests/basic_test.py
    tests/either_or.py
    get_nxpRdLib.sh
    MANIFEST.in
    Mifare.c
    Mifare.h
    nxppy.c
    README.md
    setup.py)

add_executable(nxppy ${SOURCE_FILES})